tests/ext/valid/Subtype_Valid_4.whiley
define sr4set as {int} where |$| > 0

void System::main([string] args):
    x = {1}
    this.out.println(str(x))
    
